# jp-dict-old

./: .gitignore  .prettierrc  Cargo.toml  Makefile  README.md
data/: README.md
db/: Cargo.toml
db/src/: data.rs  lib.rs  raw.rs  search.rs  writer.rs
examples/: tslint.json
examples/dict-js/: README.md  package-lock.json  package.json
examples/dict-js/lib/: index.js
examples/dict-js/native/: Cargo.toml
examples/dict-js/native/src/: lib.rs
examples/dict-ui/: index.html  package-lock.json  package.json  tsconfig.json
examples/dict-ui/src/: main.ts  preload.ts
examples/query/: Cargo.toml
examples/query/src/: main.rs
import/: Cargo.toml
import/src/: db.rs  dict.rs  generate.rs  import.rs  main.rs
src/: data.rs  lib.rs
