[package]
name = "x-jp-data"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Japanese dictionary library with words, kanji and frequency information"
repository = "https://github.com/ricardobm/x-jp-data/"
keywords = ["japanese"]
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[workspace]
members = [
	"db",
	"import",
	"examples/query"
]

[dependencies]
db = { path = "./db" }
lazy_static = "1.4"
