[package]
name = "jp-dict"
version = "0.1.0"
authors = ["Ricardo B. Machado <ricardobm@gmail.com>"]
license = "MIT"
description = "Japanese dictionary library with words, kanji and frequency information"
repository = "https://github.com/ricardobm/jp-dict/"
keywords = ["japanese"]
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[workspace]
members = [
	"db",
	"import",
	"examples/query"
]

[dependencies]
db = { path = "./db" }
lazy_static = "1.4"

[features]

# The `no-embed` feature allows disabling embedding of the dictionary data even
# on release builds.
#
# This should only be used for testing in release builds, as it will generate
# a library that is dependent on the source file.
no-embed = []
