[package]
name = "db"
version = "0.1.0"
description = "Internal data structures for the Japanese dictionary"
repository = "https://github.com/ricardobm/x-jisho-data/"
keywords = ["japanese"]
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
unicode-segmentation = "1.6"
