[package]
name = "import"
version = "0.1.0"
description = "Japanese dictionary data import and code generation tool"
repository = "https://github.com/ricardobm/x-jisho-data/"
keywords = ["japanese"]
publish = false

[dependencies]
lazy_static = "1.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicase = "2.6"
zip = "0.5"
