[package]
name = "import"
version = "0.1.0"
description = "Japanese dictionary data import and code generation tool"
keywords = ["japanese"]
publish = false

[dependencies]
db = { path = "../db" }
lazy_static = "1.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicase = "2.6"
unicode-segmentation = "1.6"
zip = "0.5"
